# python-project-lvl1

./: README.md  pyproject.toml
brain_games/scripts/: brain_games.py
everygeen_sudo.egg-info/: PKG-INFO  SOURCES.txt
